--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,58 @@
-potassium
-torch
-transformers
-onnxruntime
-onnxruntime-gpu
-einops
-fvcore
+# potassium
+# torch
+# transformers
+# onnxruntime
+# onnxruntime-gpu
+# einops
+# fvcore
+
+async-timeout==4.0.2
+blinker==1.6.2
+boto3==1.28.22
+botocore==1.31.22
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+coloredlogs==15.0.1
+einops==0.6.1
+filelock==3.12.2
+Flask==2.3.2
+flatbuffers==23.5.26
+fsspec==2023.6.0
+fvcore==0.1.5.post20221221
+huggingface-hub==0.16.4
+humanfriendly==10.0
+idna==3.4
+iopath==0.1.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.1
+numpy==1.25.2
+onnxruntime==1.15.1
+packaging==23.1
+Pillow==10.0.0
+portalocker==2.7.0
+potassium==0.1.2
+protobuf==4.24.0
+python-dateutil==2.8.2
+PyYAML==6.0.1
+redis==4.6.0
+regex==2023.8.8
+requests==2.31.0
+s3transfer==0.6.1
+safetensors==0.3.2
+six==1.16.0
+sympy==1.12
+tabulate==0.9.0
+termcolor==2.3.0
+tokenizers==0.13.3
+torch==2.0.1
+tqdm==4.66.0
+transformers==4.31.0
+typing_extensions==4.7.1
+urllib3==1.26.16
+Werkzeug==2.3.6
+yacs==0.1.8
